# mousemonitor

./: LICENSE  README.md  example.npz  setup.cfg
src/mousemonitor/: __init__.py  segmentation.py
