[metadata]
name = mousemonitor
version = 0.1
author = Charles Truong
author_email = 
maintainer = 
description = Tools to process mouse activity signals collected with force plateforms
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    matplotlib
    numba
    numpy
    pandas
    ruptures
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

 